# small_projects

Tree_structure_display/: CMakeLists.txt  README.md  main_dynamicquadtree.cpp  main_linear.cpp  main_staticquadtree.cpp  main_trees.cpp
Tree_structure_display/src/: App.cpp  App.h
